deploy/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${project_domain}`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: noop@internal
          kind: TraefikService

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${project_domain}`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: fix-double-api
      services:
        - name: backend
          port: 3001

    - match: Host(`${project_domain}`)
      kind: Rule
      services:
        - name: frontend
          port: 80

  tls:
    secretName: app-tls

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fix-double-api
spec:
  replacePathRegex:
    regex: "^/api/api/(.*)"
    replacement: "/api/$1"
